@@ -1,3 +1,10 @@
+2008-05-02  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c:
+	* src/baobab.h:
+	* src/callbacks.c:
+	Make the cursor busy in the set_busy function.
+
 2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-graphwin.c: polished
